examples/bad/ERROR_UNEXPECTED_TYPE_FOR_EXPRESSION/tuple_dot.st
language core;
extend with #tuples;

fn main(n : Nat) -> Bool {
  return {0, 0}.1
}

//ERROR_UNEXPECTED_TYPE_FOR_EXPRESSION
